--- a/css/about-me.css
+++ b/css/about-me.css
@@ -18,7 +18,7 @@ margin-left: 1rem;
 
 .about-me-description a{
   font-family: 'Roboto';
-  font-size: .25rem;
+  font-size: .45rem;
   color: black;
 }
 
@@ -37,7 +37,7 @@ margin-left: 1rem;
   width: auto;
   min-width: 50%;
   max-width: 70%;
-  height: 124%;
+  height: 134%;
   left: 20%;
   right: 30%;
   padding: 1.5rem;
@@ -45,9 +45,13 @@ margin-left: 1rem;
 
 @media (min-width:27rem) {
   .about-me-description{
-    height: 70%;
+    height: 85%;
     max-width: 15rem;
     margin-right: 4rem;
+  }
+
+  .about-me-description a{
+    font-size: 0.75rem;
   }
 
   .about-me{
@@ -62,9 +66,10 @@ margin-left: 1rem;
 
 }
 
-@media (min-width:30rem) {
+
+@media (min-width:28rem) {
   .about-me-description{
-    height: 90%;
+    height: 110%;
     max-width: 15rem;
     margin-right: 4rem;
   }
@@ -75,7 +80,10 @@ margin-left: 1rem;
   .about-me img{
     width: auto;
     max-width: 30rem;
+  }
 
+  .about-me-description a{
+    font-size: 1rem;
   }
 
   .about-me-description h1{
@@ -106,11 +114,15 @@ margin-left: 1rem;
   }
 
   .about-me-description{
-    height: 60%;
+    height: 70%;
     max-width: 15rem;
     top: 25%;
     left: 35%;
     margin-right: 4rem;
+  }
+
+  .about-me-description a{
+  font-size: 1rem;
   }
 
 }
