--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -57,7 +57,7 @@
 .project-nav-menu-item a{
   font-size: 0.45rem;
   color: white;
-  padding: .5rem;
+  padding: .25rem;
 }
 
 @media (min-width:25rem) {
@@ -84,7 +84,8 @@
 
 .home-image img{
   width:auto;
-  max-height: 50rem;
+
+  max-height: 35rem;
 }
 
 
@@ -130,7 +131,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  top:49%;
+  top:55%;
   /* justify-content: space-between; */
   background-color: white;
   min-width: 15rem;
@@ -139,7 +140,7 @@
   align-items: center;
   width: 50%;
   height: 33%;
-  padding-bottom: 1rem;
+  padding-bottom: 2rem;
   padding-left:2rem;
   padding-right:2rem;
 
@@ -148,7 +149,7 @@
 
 .nav-menu-item{
 
-  padding-top: 2rem;
+  padding-top: .5rem;
 
 }
 
@@ -177,6 +178,12 @@
   padding: 4rem;
   max-width: 30rem;
   margin-left:14rem; */
+}
+
+.nav-menu-item{
+  padding-top: 5rem;
+
+}
 }
 }
 
