--- a/css/patiojams.css
+++ b/css/patiojams.css
@@ -1,7 +1,7 @@
 .see-next h3{
 color: white;
 text-align: right;
-background-color: none;
+background: none;
 font-size: 0.45rem;
 padding-right: 2rem;
 top: 5%;
