--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -115,7 +115,6 @@
 .name h2{
   justify-content: space-around;
   top:55%;
-  /* left: 13%; */
   z-index: 7;
   position: absolute;
   align-items: center;
@@ -131,8 +130,8 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  top:55%;
-  /* justify-content: space-between; */
+  top:50%;
+
   background-color: white;
   min-width: 15rem;
   z-index: 5;
@@ -162,7 +161,7 @@
 
   justify-content: space-around;
   top:50%;
-  /* justify-content: space-between; */
+
   background-color: white;
   min-width: 15rem;
   z-index: 5;
@@ -173,11 +172,7 @@
   padding-left:2rem;
   padding-right:2rem;
   padding-top: 1.5rem;
-  /* min-width: 50%; */
-  /* top:-20rem;
-  padding: 4rem;
-  max-width: 30rem;
-  margin-left:14rem; */
+
 }
 
 .nav-menu-item{
@@ -185,7 +180,7 @@
 
 }
 }
-}
+
 
 
 .nav-menu-item a{
@@ -200,8 +195,7 @@ nav a{
   text-decoration: none;
   color: black;
   right:0;
-  justify-content: right;
-  /* padding: 1rem; */
+
 
 }
 
@@ -225,8 +219,6 @@ p{
 
 .in-text-link{
   text-decoration: none;
-  /* padding: 1rem; */
-  /* background-color: black; */
   color: white;
   font-family: 'Open Sans';
   font-weight: 400;
@@ -306,15 +298,13 @@ section{
 }
 
 footer{
-  /* position: absolute;
-  align-items: center; */
+
   z-index: 13;
   background-color: black;
-
-  /* width: auto; */
   top: 85%;
   height: 15%;
   min-width: 100%;
+
 
 
 }
@@ -324,5 +314,6 @@ footer p{
   font-family: "Open Sans";
   font-weight: 100;
   text-align: center;
-  padding-left: 60%;
+  padding-top: 1.5rem;
+  padding-left: 80%;
 }
