--- a/css/about-me.css
+++ b/css/about-me.css
@@ -1,13 +1,14 @@
 .about-me-flex-container{
   display: flex;
   flex-wrap: wrap;
-  max-width: 50rem;
-  margin-top:1rem;
+  max-width: 90rem;
+  margin-top:5rem;
 }
 
 .about-me-image img{
   width: auto;
-  max-width: 18rem;
+  max-width: 22rem;
+  max-height: 30rem;
 }
 
 .about-me-image{
@@ -17,8 +18,9 @@
 .about-me-description{
   width:auto;
   background-color: white;
-  max-width: 30rem;
-  min-width:16rem;
+  max-width: 50rem;
+  min-width:20rem;
+
   padding: 1rem;
   margin: 1rem;
 }
@@ -31,150 +33,35 @@
 
 }
 
-.about-me-description h1{
-  font-family: 'Roboto';
-  font-size: .5rem;
-  color: black;
-}
-
-.about-me-description a{
-  font-family: 'Roboto';
-  font-size: .45rem;
-  color: black;
-}
-
-.about-me-description p{
-  font-family: 'Open Sans';
-  font-weight: 200;
-  font-size: 0.25rem;
-  color:black;
-}
-
-/* .about-me{
-position: relative;
-margin-top: 5%;
-margin-left: 1rem;
-}
-
-.about-me img{
-  width: auto;
-  max-width: 18rem;
-
-}
-
-.about-me-description h1{
-  font-family: 'Roboto';
-  font-size: .5rem;
-  color: black;
-}
-
-.about-me-description a{
-  font-family: 'Roboto';
-  font-size: .45rem;
-  color: black;
-}
-
-.about-me-description p{
-  font-family: 'Open Sans';
-  font-weight: 200;
-  font-size: 0.25rem;
-  color:black;
-}
-
-.about-me-description{
-  position: absolute;
-  background-color: white;
-  z-index: 3;
-  top:45%;
-  width: auto;
-  min-width: 50%;
-  max-width: 70%;
-  height: 134%;
-  left: 20%;
-  right: 30%;
-  padding: 1.5rem;
-}
-
-@media (min-width:27rem) {
+@media (min-width:49rem) {
   .about-me-description{
-    height: 85%;
-    max-width: 15rem;
-    margin-right: 4rem;
+    min-width: 30rem;
+    min-height: 18.5rem;
   }
 
-  .about-me-description a{
-    font-size: 0.75rem;
-  }
-
-  .about-me{
-    margin: 1.25rem;
-  }
-
-  .about-me img{
-    width: auto;
-    max-width: 25rem;
-
-  }
-
-}
-
-
-@media (min-width:28rem) {
-  .about-me-description{
-    height: 110%;
-    max-width: 15rem;
-    margin-right: 4rem;
-  }
-
-  .about-me{
-    margin: 2rem;
-  }
-  .about-me img{
+  .about-me-image img{
     width: auto;
     max-width: 30rem;
-  }
-
-  .about-me-description a{
-    font-size: 1rem;
-  }
-
-  .about-me-description h1{
-    font-family: 'Roboto';
-    font-size: 1rem;
-    color: black;
-  }
-
-  .about-me-description p{
-    font-family: 'Open Sans';
-    font-weight: 200;
-    font-size: 0.75rem;
-    color:black;
+    max-height: 33rem;
   }
 
 }
 
-@media (min-width:41rem) {
-
-  .about-me{
-    margin: 3rem;
-  }
-
-  .about-me img{
-    width: auto;
-    max-width: 35rem;
-
-  }
-
-  .about-me-description{
-    height: 70%;
-    max-width: 15rem;
-    top: 25%;
-    left: 35%;
-    margin-right: 4rem;
-  }
-
-  .about-me-description a{
+.about-me-description h1{
+  font-family: 'Roboto';
   font-size: 1rem;
-  }
+  color: black;
+}
 
-} */
+.about-me-description a{
+  font-family: 'Roboto';
+  font-size: .45rem;
+  color: black;
+}
+
+.about-me-description p{
+  font-family: 'Open Sans';
+  font-weight: 200;
+  font-size: 0.75rem;
+  color:black;
+}
