--- a/css/patiojams.css
+++ b/css/patiojams.css
@@ -14,33 +14,34 @@
 }
 
 .process-two{
-  max-width: 140%;
+  max-width: 90%;
   /* max-height: 13rem; */
 
 
 }
 
-@media (min-width:40.5rem) {
+@media (min-width:48rem) {
   .project-process-flex-container{
     flex-direction: column;
     width: 30%;
     max-height: 23rem;
     margin-right: 2rem;
-    padding-top: 3.5rem;
+    padding-top: 3.75rem;
     align-items: center;
     justify-content: space-between;
 
   }
 
   .process-two{
-    min-width: 5rem;
+    min-width: 7rem;
     margin-bottom: 3rem;
+
 
 
   }
 
   .project-image{
-    max-height: 40rem;
+    min-height: 20rem;
   }
 }
 
