--- a/css/about-me.css
+++ b/css/about-me.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   max-width: 90rem;
-  margin-top:5rem;
+  margin-top:3rem;
 }
 
 .about-me-image img{
@@ -45,6 +45,9 @@
     max-height: 33rem;
   }
 
+  .about-me-flex-container{
+    margin-top:5rem;
+  }
 }
 
 .about-me-description h1{
