fixed problems when switched to SASS

--- a/css/lyn.css
+++ b/css/lyn.css
@@ -1,7 +1,7 @@
 .project-process-flex-container{
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: space-around;
   min-width: 10rem;
   flex-direction: row;
   padding-top: 1.5rem;
@@ -9,10 +9,12 @@
 
 .process-flex-item{
   width: 25%;
+
 }
 
 .process{
-  max-width: 100%;
+  max-width: 90%;
+  margin-right: 1rem;
 
 }
 
@@ -22,11 +24,14 @@
     width: 10%;
     max-height: 33rem;
     padding-top: 2.7rem;
+
     align-items: center;
   }
 
   .process{
     min-width: 5rem;
+
+
 
   }
 
@@ -38,39 +43,20 @@
 @media (min-width:42rem) {
 .project-process-flex-container{
   min-width:22rem;
-  margin-right: 4.75rem;
+  margin-right: 6rem;
 
 
 }
 
 .process{
   margin: 2rem;
+  margin-bottom: 2rem;
   min-width: 7rem;
 }
 
 }
 
-/* @media (min-width:43rem) {
-.project-process-flex-container{
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  min-width: 18rem;
-}
 
-.process{
-  min-width: 7rem;
-}
-} */
-
-
-/* .process-flex-item{
-  width: 25%;
-}
-
-.process{
-  max-width: 100%;
-} */
 
 
 .see-next h3{
